--- a/FlashCardApp/Base.lproj/Main.storyboard
+++ b/FlashCardApp/Base.lproj/Main.storyboard
@@ -43,8 +43,33 @@
                                     <outletCollection property="gestureRecognizers" destination="wag-Gh-zuy" appends="YES" id="q2t-tb-ayH"/>
                                 </connections>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kAj-iR-ngL">
+                                <rect key="frame" x="318" y="781" width="76" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Next">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gf1-pz-hGU"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zud-wk-xCQ">
+                                <rect key="frame" x="20" y="781" width="92" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Prev">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K4h-Qp-INJ"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2L-J0-jvA">
-                                <rect key="frame" x="178" y="689" width="74" height="65"/>
+                                <rect key="frame" x="178" y="773" width="74" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
@@ -62,6 +87,8 @@
                     <connections>
                         <outlet property="answer" destination="gRU-UT-AgP" id="Wuv-Ie-Fjo"/>
                         <outlet property="card" destination="HR4-cw-X4v" id="4qj-66-WIh"/>
+                        <outlet property="nextButton" destination="kAj-iR-ngL" id="VeM-eY-T99"/>
+                        <outlet property="prevButton" destination="zud-wk-xCQ" id="gl4-uH-ouO"/>
                         <outlet property="question" destination="uUq-X1-1r6" id="taR-22-bUm"/>
                     </connections>
                 </viewController>
